samples/_failures_safe/1761689154_b7a4a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbd1b796.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_fbd1b796.c:167:39: error: missing terminating " character
  167 |         case TOKEN_IDENTIFIER: return "
      |                                       ^
./samples/SAFE/__tmp_fbd1b796.c:167:9: error: expected expression at end of input
  167 |         case TOKEN_IDENTIFIER: return "
      |         ^~~~
./samples/SAFE/__tmp_fbd1b796.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbd1b796.c:167:9: error: expected declaration or statement at end of input
